.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Vehicle__c.object
<CustomObject>
    <description>Record employee vehicles.  Used for expenses</description>
    <fields>
        <fullName>xcdhcm__CO2_emissions__c</fullName>
        <description>CO2 emissions required for RTI submission to HMRC for the vehicle</description>
        <inlineHelpText>The Vehicles registered CO2 emissions for submission to HMRC either via RTI or P11D</inlineHelpText>
        <label>CO2 emissions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Colour__c</fullName>
        <label>Colour</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Driver_licence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver licence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Detail_L__c</fullName>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Employee_Detail_L__r.xcdhcm__Leaving_Date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Engine_size__c</fullName>
        <label>Engine size</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>xcdhcm__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>500cc or less</fullName>
                </value>
                <value>
                    <fullName>501-1000cc</fullName>
                </value>
                <value>
                    <fullName>&gt;1000cc</fullName>
                </value>
                <value>
                    <fullName>1400cc or less</fullName>
                </value>
                <value>
                    <fullName>1401-1600cc</fullName>
                </value>
                <value>
                    <fullName>1601-2000cc</fullName>
                </value>
                <value>
                    <fullName>&gt;2000cc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Fuel_type__c</fullName>
        <label>Fuel type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Petrol</fullName>
                </value>
                <value>
                    <fullName>LPG</fullName>
                </value>
                <value>
                    <fullName>Diesel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Insurance_expiry_date__c</fullName>
        <label>Insurance expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Insurance_start_date__c</fullName>
        <label>Insurance start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Employee_Detail_L__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee_Detail_L__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c , 
xcdhcm__Employee_leaving_date__c &lt;  xcdhcm__Employee_Detail_L__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c 
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__MOT_expiry_date__c</fullName>
        <label>MOT expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__No_longer_used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Rates_table__c</fullName>
        <description>Use where mileage is reimbursed vs AFR, AMR or AMAP rates</description>
        <label>Rates table</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFR</fullName>
                </value>
                <value>
                    <fullName>AMR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Registration__c</fullName>
        <label>Registration</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bicycle</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vehicle</label>
    <nameField>
        <label>Make/model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Complete_vehicle_tax_details</fullName>
        <active>false</active>
        <description>If the vehicle type is car, user should add fuel type and engine size so that sales tax will be calculated correctly</description>
        <errorConditionFormula>and(
 ispickval(xcdhcm__Type__c , &quot;Car&quot;),
 or(ispickval( xcdhcm__Engine_size__c,&quot;&quot; ),
    ispickval( xcdhcm__Fuel_type__c,&quot;&quot; )
))</errorConditionFormula>
        <errorMessage>If your vehicle is a car, please note the fuel type and engine size so that when you claim mileage expenses tax will be calculated correctly</errorMessage>
    </validationRules>
</CustomObject>